Fixed a small google drive issue in the gd_put command (lines 213 and 361). Started a UsingScipiper.Rmd to document my own use of the system. Alison will likely help make that more sensible

--- a/1_wqdata/cfg/wqp_codes.yml
+++ b/1_wqdata/cfg/wqp_codes.yml
@@ -32,6 +32,17 @@ characteristicName:
   
   cdom:
     - 'Colored dissolved organic matter (CDOM)'
+    
+  doc:
+    - 'Organic carbon'
+    - 'Total carbon'
+    - 'Hydrophilic fraction of organic carbon'
+    - 'Non-purgeable Organic Carbon (NPOC)'
+    
+  poc:
+    - 'Particulate organic carbon'
+    - 'Total Particulate Carbon'
+    - 'Total Particulate Organic Carbon'
   
 # https://www.waterqualitydata.us/Codes/sampleMedia?mimeType=xml
 sampleMedia:
@@ -42,3 +53,5 @@ sampleMedia:
 siteType:
   - "Lake, Reservoir, Impoundment"
   - "Stream"
+  - "Estuary"
+  - "Facility"
