Updated claritynets and gitignore

--- a/1_wqdata/cfg/wqp_codes.yml
+++ b/1_wqdata/cfg/wqp_codes.yml
@@ -8,6 +8,9 @@ characteristicName:
     - 'Total Suspended Particulate Matter'
     - 'Fixed suspended solids'
     
+  #tis:
+    #- 'Sediment, inorganic, classification (choice list)'
+    
   chlorophyll:
     - "Chlorophyll"
     - "Chlorophyll A"
