--- a/remake.yml
+++ b/remake.yml
@@ -23,7 +23,7 @@ targets:
   1_wqdata:
     depends:
       - lib/cfg/gd_config.yml
-      - 1_wqdata/log/tasks_1_wqp_munge.ind
+      - 1_wqdata/log/tasks_1_wqp_merge.ind
 
   lib/cfg/gd_config.yml:
     command: gd_config(config_file=target_name, folder=I("0B-c5tErcTY2fTU1pTTBOR2RPdVk"))
@@ -107,36 +107,27 @@ targets:
       task_plan=wqp_pull_plan, task_makefile='tasks_1_wqp.yml',
       num_tries=I(30), sleep_on_error=I(20))
 
-  # -- munge and combine the data --
+  # --combine the data --
 
   # prepare a remake-style plan for combining and munging the data for each constituent
-  wqp_munge_plan:
-    command: plan_wqp_munge(partitions=wqp_pull_partitions, pull_plan=wqp_pull_plan, folders=wqp_pull_folders)
-  tasks_1_wqp_munge.yml:
-    command: create_wqp_munge_makefile(makefile=target_name, task_plan=wqp_munge_plan, pull_makefile='tasks_1_wqp.yml')
+  wqp_merge_plan:
+    command: plan_wqp_merge(partitions=wqp_pull_partitions, pull_plan=wqp_pull_plan, folders=wqp_pull_folders)
+  tasks_1_wqp_merge.yml:
+    command: create_wqp_merge_makefile(makefile=target_name, task_plan=wqp_merge_plan, pull_makefile='tasks_1_wqp.yml')
 
-  # combine and munge the raw data files
+  # combine the raw data files
   #task_names=I('cdom'), step_names=I('munge'),
-  1_wqdata/log/tasks_1_wqp_munge.ind:
+  1_wqdata/log/tasks_1_wqp_merge.ind:
     command: loop_tasks(
-      task_plan=wqp_munge_plan, task_makefile='tasks_1_wqp_munge.yml',
+      task_plan=wqp_merge_plan, task_makefile='tasks_1_wqp_merge.yml',
       num_tries=I(1), sleep_on_error=I(1))
-  
+
+##DOWN HERE WILL BE THE MUNGING CALLS TO OUR LONG RMD FILE##
+
   # rules to access the files created in tasks_1_wqp_munge.yml. We implicitly depend
   # on the constituent-specific indicator file because this file will be created in
   # the process of creating the job indicator file (on which we explicitly depend), and
   # it must exist by the time we try to call the command for gd_get to succeed.
   # This approach means we will see warnings until the all_xx.feather.ind files are all
   # git committed
-  1_wqdata/out/wqp/all_cdom.feather:
-    depends: 1_wqdata/log/tasks_1_wqp_munge.ind
-    command: gd_get(ind_file='1_wqdata/out/wqp/all_cdom.feather.ind')
-  1_wqdata/out/wqp/all_chlorophyll.feather:
-    depends: 1_wqdata/log/tasks_1_wqp_munge.ind
-    command: gd_get(ind_file='1_wqdata/out/wqp/all_chlorophyll.feather.ind')
-  1_wqdata/out/wqp/all_secchi.feather:
-    depends: 1_wqdata/log/tasks_1_wqp_munge.ind
-    command: gd_get(ind_file='1_wqdata/out/wqp/all_secchi.feather.ind')
-  1_wqdata/out/wqp/all_tss.feather:
-    depends: 1_wqdata/log/tasks_1_wqp_munge.ind
-    command: gd_get(ind_file='1_wqdata/out/wqp/all_tss.feather.ind')
+
