--- a/1_wqdata.yml
+++ b/1_wqdata.yml
@@ -138,17 +138,68 @@ targets:
   # git committed
 
   1_wqdata/doc/1_wqp_data_harmonize_explorer.html:
-    #depends: 1_wqdata/log/tasks_1_wqp_merge.ind
+    depends: 1_wqdata/log/tasks_1_wqp_merge.ind
     command: render_rmd(
       input='1_wqdata/src/1_wqp_data_harmonize_explorer.Rmd',
       output_file=target_name)
+
+  # side effects of 1_wqdata/src/1_wqp_data_harmonize_explorer.Rmd:
+  1_wqdata/tmp/harmonized/secchi_harmony.feather:
+    depends: 1_wqdata/doc/1_wqp_data_harmonize_explorer.html
+    command: c()
+  1_wqdata/tmp/harmonized/chl.a_harmony.feather:
+    depends: 1_wqdata/doc/1_wqp_data_harmonize_explorer.html
+    command: c()
+  1_wqdata/tmp/harmonized/tss1_harmony.feather:
+    depends: 1_wqdata/doc/1_wqp_data_harmonize_explorer.html
+    command: c()
+  1_wqdata/tmp/harmonized/tss2_harmony.feather:
+    depends: 1_wqdata/doc/1_wqp_data_harmonize_explorer.html
+    command: c()
+  1_wqdata/tmp/harmonized/doc_harmony.feather:
+    depends: 1_wqdata/doc/1_wqp_data_harmonize_explorer.html
+    command: c()
+  1_wqdata/tmp/harmonized/tis_harmony.feather:
+    depends: 1_wqdata/doc/1_wqp_data_harmonize_explorer.html
+    command: c()
+  1_wqdata/tmp/harmonized/sand_harmony.feather:
+    depends: 1_wqdata/doc/1_wqp_data_harmonize_explorer.html
+    command: c()
     
-  #1_wqdata/tmp/harmonized/secchi_harmony.feather:
-  #  depends: 1_wqdata/doc/1_wqp_data_harmonize_explorer.html
-  
-  #1_wqdata/tmp/harmonized/chl.a_harmony.feather
-  #1_wqdata/tmp/harmonized/tss1_harmony.feather
-  #1_wqdata/tmp/harmonized/tss2_harmony.feather
-  #1_wqdata/tmp/harmonized/doc_harmony.feather
-  #1_wqdata/tmp/harmonized/tis_harmony.feather
-  #1_wqdata/tmp/harmonized/sand_harmony.feather
+  1_wqdata/doc/2_combined_wqp_munge.html:
+    depends:
+      - 1_wqdata/tmp/harmonized/secchi_harmony.feather
+      - 1_wqdata/tmp/harmonized/chl.a_harmony.feather
+      - 1_wqdata/tmp/harmonized/tss1_harmony.feather
+      - 1_wqdata/tmp/harmonized/tss2_harmony.feather
+      - 1_wqdata/tmp/harmonized/doc_harmony.feather
+      - 1_wqdata/tmp/harmonized/tis_harmony.feather
+      - 1_wqdata/tmp/harmonized/sand_harmony.feather
+    command: render_rmd(
+      input='1_wqdata/src/2_combined_wqp_munge.Rmd',
+      output_file=target_name)
+
+  # side effects of 1_wqdata/src/2_combined_wqp_munge.Rmd:
+  1_wqdata/out/unity/secchi_unity.feather:
+    depends: 1_wqdata/doc/2_combined_wqp_munge.html
+    command: c()
+  1_wqdata/out/unity/chl.a_unity.feather:
+    depends: 1_wqdata/doc/2_combined_wqp_munge.html
+    command: c()
+  1_wqdata/out/unity/tss1_unity.feather:
+    depends: 1_wqdata/doc/2_combined_wqp_munge.html
+    command: c()
+  1_wqdata/out/unity/tss2_unity.feather:
+    depends: 1_wqdata/doc/2_combined_wqp_munge.html
+    command: c()
+  1_wqdata/out/unity/doc_unity.feather:
+    depends: 1_wqdata/doc/2_combined_wqp_munge.html
+    command: c()
+  1_wqdata/out/unity/tis_unity.feather:
+    depends: 1_wqdata/doc/2_combined_wqp_munge.html
+    command: c()
+  1_wqdata/out/unity/sand_unity.feather:
+    depends: 1_wqdata/doc/2_combined_wqp_munge.html
+    command: c()
+    
+    
