--- a/1_wqdata.yml
+++ b/1_wqdata.yml
@@ -127,18 +127,28 @@ targets:
     command: loop_tasks(
       task_plan=wqp_merge_plan, task_makefile='tasks_1_wqp_merge.yml',
       num_tries=I(1), sleep_on_error=I(1))
-
-##DOWN HERE WILL BE THE MUNGING CALLS TO OUR LONG RMD FILE##
-
-  # rules to access the files created in tasks_1_wqp_munge.yml. We implicitly depend
-  # on the constituent-specific indicator file because this file will be created in
-  # the process of creating the job indicator file (on which we explicitly depend), and
-  # it must exist by the time we try to call the command for gd_get to succeed.
-  # This approach means we will see warnings until the all_xx.feather.ind files are all
-  # git committed
-
-  1_wqdata/doc/1_wqp_data_harmonize_explorer.html:
+  # side effects of 1_wqdata/log/tasks_1_wqp_merge.ind include the following
+  # *.feather.ind files. the following targets declare that relationship and
+  # also provide retrival instructions for getting the corresponding *.feather files
+  1_wqdata/out/wqp/all_raw_secchi.feather:
     depends: 1_wqdata/log/tasks_1_wqp_merge.ind
+    command: gd_get(I('1_wqdata/out/wqp/all_raw_secchi.feather.ind'))
+  1_wqdata/out/wqp/all_raw_tss.feather:
+    depends: 1_wqdata/log/tasks_1_wqp_merge.ind
+    command: gd_get(I('1_wqdata/out/wqp/all_raw_tss.feather.ind'))
+  1_wqdata/out/wqp/all_raw_doc.feather:
+    depends: 1_wqdata/log/tasks_1_wqp_merge.ind
+    command: gd_get(I('1_wqdata/out/wqp/all_raw_doc.feather.ind'))
+  1_wqdata/out/wqp/all_raw_chlorophyll.feather:
+    depends: 1_wqdata/log/tasks_1_wqp_merge.ind
+    command: gd_get(I('1_wqdata/out/wqp/all_raw_chlorophyll.feather.ind'))
+  
+  # --- MUNGING --- #
+
+  # main effect of 1_wqdata/src/1_wqp_data_harmonize_explorer.Rmd:
+  1_wqdata/doc/1_wqp_data_harmonize_explorer.html:
+    depends:
+      - 1_wqdata/log/tasks_1_wqp_merge.ind
     command: render_rmd(
       input='1_wqdata/src/1_wqp_data_harmonize_explorer.Rmd',
       output_file=target_name)
@@ -166,6 +176,7 @@ targets:
     depends: 1_wqdata/doc/1_wqp_data_harmonize_explorer.html
     command: c()
     
+  # main effect of 1_wqdata/src/2_combined_wqp_munge.Rmd:
   1_wqdata/doc/2_combined_wqp_munge.html:
     depends:
       - 1_wqdata/tmp/harmonized/secchi_harmony.feather
@@ -201,5 +212,38 @@ targets:
   1_wqdata/out/unity/sand_unity.feather:
     depends: 1_wqdata/doc/2_combined_wqp_munge.html
     command: c()
-    
-    
+  
+  # main effect of 1_wqdata/doc/3_wqp_merge_widen.Rmd:
+  1_wqdata/doc/3_wqp_merge_widen.html:
+    depends:
+      - 1_wqdata/out/unity/secchi_unity.feather
+      - 1_wqdata/out/unity/chl.a_unity.feather
+      - 1_wqdata/out/unity/tss1_unity.feather
+      - 1_wqdata/out/unity/tss2_unity.feather
+      - 1_wqdata/out/unity/doc_unity.feather
+      - 1_wqdata/out/unity/tis_unity.feather
+      - 1_wqdata/out/unity/sand_unity.feather
+    command: render_rmd(
+      input='1_wqdata/src/3_wqp_merge_widen.Rmd',
+      output_file=target_name)
+
+  # side effects of 1_wqdata/src/3_wqp_merge_widen.Rmd:
+  1_wqdata/out/wqp_unity_wide.feather:
+    depends: 1_wqdata/doc/3_wqp_merge_widen.html
+    command: c()
+  
+  # main effect of 1_wqdata/src/4_wqp_lagos_merge.Rmd:
+  1_wqdata/doc/4_wqp_lagos_merge.html:
+    depends:
+      - 1_wqdata/out/wqp_unity_wide.feather
+      #- 1_wqdata/src/pluribus_unum.R
+    command: render_rmd(
+      input='1_wqdata/src/4_wqp_lagos_merge.Rmd',
+      output_file=target_name)
+
+  # side effects of 1_wqdata/src/4_wqp_lagos_merge.Rmd:
+  1_wqdata/out/wqp_lagos_unity.feather.ind:
+    depends: 1_wqdata/doc/3_wqp_merge_widen.html
+    command: c()
+  1_wqdata/out/wqp_lagos_unity.feather:
+    command: gd_get('1_wqdata/out/wqp_lagos_unity.feather.ind')
